--- a/second.html
+++ b/second.html
@@ -6,6 +6,7 @@
     <title>Second</title>
 </head>
 <body>
+    <h2>Second Page</h2>
     <button onclick="history.back()">Go back</button>
 </body>
 </html>
